Fix Java 21 compatibility issues for Java 17
Co-authored-by: cybermumuca <111786794+cybermumuca@users.noreply.github.com>