@@ -84,7 +84,7 @@ public class MealLogPreferenceServiceImplIntegrationTest {
                             tuple(MealType.LUNCH, LocalTime.of(12, 0))
                     );
 
-            var mealLogResult1 = result.getFirst();
+            var mealLogResult1 = result.get(0);
 
             var mealLogPreferenceInDatabase1 = mealLogPreferenceRepository
                     .findById(mealLogResult1.id())
@@ -94,7 +94,7 @@ public class MealLogPreferenceServiceImplIntegrationTest {
             assertThat(mealLogPreferenceInDatabase1.getTime()).isEqualTo(mealLogResult1.time());
             assertThat(mealLogPreferenceInDatabase1.getCaloriesGoal()).isEqualTo(mealLogResult1.caloriesGoal());
 
-            var mealLogResult2 = result.getLast();
+            var mealLogResult2 = result.get(result.size() - 1);
 
             var mealLogPreferenceInDatabase2 = mealLogPreferenceRepository.findById(mealLogResult2.id()).orElseThrow();
 
